chore(maintain): add copy updates to profile

--- a/self/index.html
+++ b/self/index.html
@@ -29,11 +29,11 @@
               <div class="profile">
                 <h1 class="title">Yo'</h1>
                 <p class="description">
-                  I’m the resident technologist/lead developer at Y&R NZ where I’ve been working extensively on bespoke interactive applications, their architecture and their development while setting technical direction, stratergy and best practices.
+                  I’m the resident technologist/lead developer at Y&R NZ where I’ve been working extensively on bespoke interactive applications - both the architecture and development - while setting technical direction, strategy and best practice guidelines.
                   <br><br>
-                  With a background in media comms I'm driven by more than just the technology stack but how it enchances our experiences.
+                  With a background in media comms I'm driven not just by the technology stack but how it enhances our experiences.
                   <br><br>
-                  I’ve worked with some fantastic people and brands in producing great work for the likes of Disney, Microsoft, Virgin Media, BNZ, Karicare and many more.
+                  I’ve worked with some fantastic people and brands, producing work for the likes of Disney, Microsoft, Virgin Media, BNZ, Karicare and many more.
                 </p>
               </div>
             </div>
