--- a/self/index.html
+++ b/self/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans:700|GFS+Didot&amp;subset=greek">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/favicon.ico?v=242738432">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-57712106-1', 'auto');
+      ga('send', 'pageview');
+      
+    </script>
   </head>
   <body>
     <div class="u-fill u-no-overflow">
@@ -30,11 +40,11 @@
               <div class="profile">
                 <h1 class="title">Yo'</h1>
                 <p class="description">
-                  I’m the resident technologist/lead developer at Y&R NZ where I’ve been working extensively on bespoke interactive applications - both the architecture and development - while setting technical direction, strategy and best practice guidelines.
+                  I’m the resident technologist/lead developer at Y&R NZ where I’ve been working extensively on bespoke interactive applications, their architecture and their development while setting technical direction, stratergy and best practices.
                   <br><br>
-                  With a background in media comms I'm driven not just by the technology stack but how it enhances our experiences.
+                  With a background in media comms I'm driven by more than just the technology stack but how it enchances our experiences.
                   <br><br>
-                  I’ve worked with some fantastic people and brands, producing work for the likes of Disney, Microsoft, Virgin Media, BNZ, Karicare and many more.
+                  I’ve worked with some fantastic people and brands in producing great work for the likes of Disney, Microsoft, Virgin Media, BNZ, Karicare and many more.
                 </p>
               </div>
             </div>
