Adds updates for 2018 already

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
+
       ga('create', 'UA-57712106-1', 'auto');
       ga('send', 'pageview');
-      
+
     </script>
   </head>
   <body>
@@ -36,7 +36,10 @@
       <div push-nav class="page home">
         <div class="page-inner">
           <div class="content">
-            <h1 class="title l-vert-center">chasevida</h1>
+            <h1 class="title l-vert-center">
+              chasevida
+              <span class="sub-title">chase-life</span>
+            </h1>
           </div>
         </div>
       </div>
