--- a/self/index.html
+++ b/self/index.html
@@ -15,10 +15,10 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
+
       ga('create', 'UA-57712106-1', 'auto');
       ga('send', 'pageview');
-      
+
     </script>
   </head>
   <body>
@@ -40,16 +40,29 @@
               <div class="profile">
                 <h1 class="title">Yo'</h1>
                 <p class="description">
-                  I’m the resident technologist/lead developer at Y&R NZ where I’ve been working extensively on bespoke interactive applications, their architecture and their development while setting technical direction, stratergy and best practices.
+                  I’ve been the resident tech director, lead technologist and engineer at some of NZ’s leading agencies and tech shops. Working extensively across large scalable systems and bespoke applications, I’ve been responsible for their architecture and development whilst setting technical direction, strategy and best practices for internal and client teams.
                   <br><br>
                   With a background in media comms I'm driven by more than just the technology stack but how it enchances our experiences.
                   <br><br>
-                  I’ve worked with some fantastic people and brands in producing great work for the likes of Disney, Microsoft, Virgin Media, BNZ, Karicare and many more.
-                </p>
+                  I’ve worked with some fantastic people and brands in producing great work for the likes of Disney, Microsoft, Virgin Media, Spark <sup>NZ</sup>, BNZ and many more.                </p>
               </div>
             </div>
             <div class="col col-right">
               <div class="img img-profile"></div>
+              <div class="profile-contact">
+                <h4>Personal</h4>
+                <p>
+                  <a href="mailto:mark@chasevida.me">mark@chasevida.me</a>
+                  <br>
+                  <a href="tel:+6421610119">+64 21 610 119</a>
+                </p>
+                <h4>Startups</h4>
+                <p>
+                  <a href="https://headflex.me" target="blank">https://headflex.me</a>
+                  <br>
+                  <a href="https://fellow.digital" target="blank">https://fellow.digital</a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
