Add twitter handle... why not

--- a/self/index.html
+++ b/self/index.html
@@ -41,9 +41,9 @@
                 <h1 class="title">Yo'</h1>
                 <p class="description">
                   I’ve been the resident tech director, lead technologist and engineer at some of NZ’s leading agencies and tech shops. Working extensively across large scalable systems and bespoke applications, I’ve been responsible for their architecture and development whilst setting technical direction, strategy and best practices for internal and client teams.
-                  <br><br>
+                  <br /><br />
                   With a background in media comms I'm driven by more than just the technology stack but how it enchances our experiences.
-                  <br><br>
+                  <br /><br />
                   I’ve worked with some fantastic people and brands in producing great work for the likes of Disney, Microsoft, Virgin Media, Spark <sup>NZ</sup>, BNZ and many more.                </p>
               </div>
             </div>
@@ -53,13 +53,15 @@
                 <h4>Personal</h4>
                 <p>
                   <a href="mailto:mark@chasevida.me">mark@chasevida.me</a>
-                  <br>
+                  <br />
+                  <a href="http://twitter.com/chasevida" target="blank">twitter.com/chasevida</a>
+                  <br />
                   <a href="tel:+6421610119">+64 21 610 119</a>
                 </p>
                 <h4>Startups</h4>
                 <p>
                   <a href="https://headflex.me" target="blank">https://headflex.me</a>
-                  <br>
+                  <br />
                   <a href="https://fellow.digital" target="blank">https://fellow.digital</a>
                 </p>
               </div>
