Add Samplar to startup list.

--- a/self/index.html
+++ b/self/index.html
@@ -60,7 +60,7 @@
                 </p>
                 <h4>Startups</h4>
                 <p>
-                  <a href="https://headflex.me" target="blank">https://headflex.me</a>
+                  <a href="https://samplar.be" target="blank">https://samplar.be</a>
                   <br />
                   <a href="https://fellow.digital" target="blank">https://fellow.digital</a>
                 </p>
